HD.err
T_HuffmanDict.cpp: In function ‘int main()’:
T_HuffmanDict.cpp:15:21: error: no match for ‘operator>>’ (operand types are ‘std::basic_ostream<char>’ and ‘unsigned int’)
  std::cout << "c: " >> h['c'] << '\n';
                      
T_HuffmanDict.cpp:15:21: note: candidate: operator>>(int, unsigned int) <built-in>
T_HuffmanDict.cpp:15:21: note:   no known conversion for argument 1 from ‘std::basic_ostream<char>’ to ‘int’
In file included from /usr/include/c++/6/iostream:40:0,
                 from T_HuffmanDict.cpp:1:
/usr/include/c++/6/istream:924:5: note: candidate: template<class _CharT, class _Traits, class _Tp> std::basic_istream<_CharT, _Traits>& std::operator>>(std::basic_istream<_CharT, _Traits>&&, _Tp&)
     operator>>(basic_istream<_CharT, _Traits>&& __is, _Tp& __x)
     ^~~~~~~~
/usr/include/c++/6/istream:924:5: note:   template argument deduction/substitution failed:
T_HuffmanDict.cpp:15:29: note:   ‘std::basic_ostream<char>’ is not derived from ‘std::basic_istream<_CharT, _Traits>’
  std::cout << "c: " >> h['c'] << '\n';
                             ^
In file included from /usr/include/c++/6/iostream:40:0,
                 from T_HuffmanDict.cpp:1:
/usr/include/c++/6/istream:808:5: note: candidate: template<class _Traits> std::basic_istream<char, _Traits>& std::operator>>(std::basic_istream<char, _Traits>&, signed char*)
     operator>>(basic_istream<char, _Traits>& __in, signed char* __s)
     ^~~~~~~~
/usr/include/c++/6/istream:808:5: note:   template argument deduction/substitution failed:
T_HuffmanDict.cpp:15:29: note:   ‘std::basic_ostream<char>’ is not derived from ‘std::basic_istream<char, _Traits>’
  std::cout << "c: " >> h['c'] << '\n';
                             ^
In file included from /usr/include/c++/6/iostream:40:0,
                 from T_HuffmanDict.cpp:1:
/usr/include/c++/6/istream:803:5: note: candidate: template<class _Traits> std::basic_istream<char, _Traits>& std::operator>>(std::basic_istream<char, _Traits>&, unsigned char*)
     operator>>(basic_istream<char, _Traits>& __in, unsigned char* __s)
     ^~~~~~~~
/usr/include/c++/6/istream:803:5: note:   template argument deduction/substitution failed:
T_HuffmanDict.cpp:15:29: note:   ‘std::basic_ostream<char>’ is not derived from ‘std::basic_istream<char, _Traits>’
  std::cout << "c: " >> h['c'] << '\n';
                             ^
In file included from /usr/include/c++/6/iostream:40:0,
                 from T_HuffmanDict.cpp:1:
/usr/include/c++/6/istream:761:5: note: candidate: template<class _Traits> std::basic_istream<char, _Traits>& std::operator>>(std::basic_istream<char, _Traits>&, signed char&)
     operator>>(basic_istream<char, _Traits>& __in, signed char& __c)
     ^~~~~~~~
/usr/include/c++/6/istream:761:5: note:   template argument deduction/substitution failed:
T_HuffmanDict.cpp:15:29: note:   ‘std::basic_ostream<char>’ is not derived from ‘std::basic_istream<char, _Traits>’
  std::cout << "c: " >> h['c'] << '\n';
                             ^
In file included from /usr/include/c++/6/iostream:40:0,
                 from T_HuffmanDict.cpp:1:
/usr/include/c++/6/istream:756:5: note: candidate: template<class _Traits> std::basic_istream<char, _Traits>& std::operator>>(std::basic_istream<char, _Traits>&, unsigned char&)
     operator>>(basic_istream<char, _Traits>& __in, unsigned char& __c)
     ^~~~~~~~
/usr/include/c++/6/istream:756:5: note:   template argument deduction/substitution failed:
T_HuffmanDict.cpp:15:29: note:   ‘std::basic_ostream<char>’ is not derived from ‘std::basic_istream<char, _Traits>’
  std::cout << "c: " >> h['c'] << '\n';
                             ^
In file included from /usr/include/c++/6/istream:934:0,
                 from /usr/include/c++/6/iostream:40,
                 from T_HuffmanDict.cpp:1:
/usr/include/c++/6/bits/istream.tcc:923:5: note: candidate: template<class _CharT, class _Traits> std::basic_istream<_CharT, _Traits>& std::operator>>(std::basic_istream<_CharT, _Traits>&, _CharT&)
     operator>>(basic_istream<_CharT, _Traits>& __in, _CharT& __c)
     ^~~~~~~~
/usr/include/c++/6/bits/istream.tcc:923:5: note:   template argument deduction/substitution failed:
T_HuffmanDict.cpp:15:29: note:   ‘std::basic_ostream<char>’ is not derived from ‘std::basic_istream<_CharT, _Traits>’
  std::cout << "c: " >> h['c'] << '\n';
                             ^
In file included from /usr/include/c++/6/istream:934:0,
                 from /usr/include/c++/6/iostream:40,
                 from T_HuffmanDict.cpp:1:
/usr/include/c++/6/bits/istream.tcc:955:5: note: candidate: template<class _CharT2, class _Traits2> std::basic_istream<_CharT, _Traits>& std::operator>>(std::basic_istream<_CharT, _Traits>&, _CharT2*)
     operator>>(basic_istream<_CharT, _Traits>& __in, _CharT* __s)
     ^~~~~~~~
/usr/include/c++/6/bits/istream.tcc:955:5: note:   template argument deduction/substitution failed:
T_HuffmanDict.cpp:15:29: note:   ‘std::basic_ostream<char>’ is not derived from ‘std::basic_istream<_CharT, _Traits>’
  std::cout << "c: " >> h['c'] << '\n';
                             ^
In file included from /usr/include/c++/6/string:53:0,
                 from /usr/include/c++/6/bits/locale_classes.h:40,
                 from /usr/include/c++/6/bits/ios_base.h:41,
                 from /usr/include/c++/6/ios:42,
                 from /usr/include/c++/6/ostream:38,
                 from /usr/include/c++/6/iostream:39,
                 from T_HuffmanDict.cpp:1:
/usr/include/c++/6/bits/basic_string.tcc:1437:5: note: candidate: template<class _CharT, class _Traits, class _Alloc> std::basic_istream<_CharT, _Traits>& std::operator>>(std::basic_istream<_CharT, _Traits>&, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&)
     operator>>(basic_istream<_CharT, _Traits>& __in,
     ^~~~~~~~
/usr/include/c++/6/bits/basic_string.tcc:1437:5: note:   template argument deduction/substitution failed:
T_HuffmanDict.cpp:15:29: note:   ‘std::basic_ostream<char>’ is not derived from ‘std::basic_istream<_CharT, _Traits>’
  std::cout << "c: " >> h['c'] << '\n';
                             ^
